--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "discord.js": "^14.7.1"
+    "@discordjs/voice": "^0.14.0",
+    "discord.js": "^14.7.1",
+    "libsodium-wrappers": "^0.7.10",
+    "play-dl": "^1.9.6"
   }
 }
