--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
+  "main": "client.js",
   "dependencies": {
-    "@discordjs/voice": "^0.14.0",
-    "discord.js": "^14.7.1",
+    "@discordjs/voice": "^0.16.0",
+    "discord.js": "^14.8.0",
     "libsodium-wrappers": "^0.7.10",
     "play-dl": "^1.9.6"
   }
