--- a/package.json
+++ b/package.json
@@ -5,5 +5,6 @@
     "discord.js": "^14.8.0",
     "libsodium-wrappers": "^0.7.10",
     "play-dl": "^1.9.6"
-  }
+  },
+  "scripts": { "bot" : "node client.js" }
 }
